--- a/rodanandfields-clone/src/Components/Styles/styles.css
+++ b/rodanandfields-clone/src/Components/Styles/styles.css
@@ -1,22 +1,31 @@
-.swiper {
+#swiper {
     width: 100%;
-    height: 250px;
+    height: 300px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #e5ebef;
   }
   
-  .swiper-slide {
-    display: flex;
+  #swiperslider {
+    display: block;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     position: relative;
     margin-left: 5px;
+   
   }
   
-  .swiper-slide img {
+  #swiperslider div {
     display: block;
     width: 100%;
-  }
+    height: "100%";
   
+  }
+  #swiperslider div img {
+        width: 100%;
+        height: 80%;
+  }
   @media only screen and (min-width: 769px) {
     .swiper-slide:first-child {
       transition: transform 100ms;
