--- a/rodanandfields-clone/src/Components/Styles/styles2.css
+++ b/rodanandfields-clone/src/Components/Styles/styles2.css
@@ -1,7 +1,7 @@
 .swiper {
     width: 100%;
     height: 530px;
-    padding-top: 10px;
+    padding-top: 20px;
     
   }
   
@@ -11,16 +11,17 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    margin-left: 5px;
-    border: 2px solid green;
-    height: 450px;
+    margin-left: 10px;
+   
+    height: 480px;
+    width:260px ;
   }
   
   .swiper-slide div {
     display: block;
-    width: 99%;
+    width: 100%;
     height: 100%;
-    border: 1px solid black;
+    
     background-color: white;
   }
   .swiper-slide .unique{
@@ -37,8 +38,14 @@
     line-height: 1.2;
     letter-spacing: 1px;
 
+
              
   }
+  .swiper-slide div>img{
+          width: 100%;
+          height: 43%;
+  }
+  
   @media only screen and (min-width: 769px) {
     .swiper-slide:first-child {
       transition: transform 100ms;
