--- a/rodanandfields-clone/src/Components/Navbar.css
+++ b/rodanandfields-clone/src/Components/Navbar.css
@@ -1,6 +1,11 @@
 .nav-div{
     width: 100%;
     height: 60px;
+    position: relative;
+    top: 60px;
+    left: 0px;
+    background-color: white;
+   
 }
 .ul{
     display: flex;
@@ -23,7 +28,7 @@
 /* megamenu */
 .mega-menu{
     position: absolute;
-    top: 124px;
+    top: 30px;
     left:0px;
     width: 100%;
     margin: auto;
