--- a/rodanandfields-clone/src/Components/Styles/DermDesigned.css
+++ b/rodanandfields-clone/src/Components/Styles/DermDesigned.css
@@ -1,10 +1,11 @@
 .dermcontainer{
-       
+       box-sizing: border-box;
         width: 100%;
-        height: 100vh;
+        height: 115vh;
         background-color: #f8f4f2;
         text-align: center;
         padding-top: 30px;
+        /* border: 3px solid green; */
 }
 .h1{
     font-size: 40px;
